--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,10 @@ set(CMAKE_CXX_STANDARD 20)
 find_package(Sqlite3 REQUIRED)
 add_executable(cpp_cli_auth_boilerplate main.cpp
         database/DatabaseManager.cpp
-        database/DatabaseManager.h)
+        database/DatabaseManager.h
+        data/User.h
+        service/UserService.h
+        service/UserService.cpp
+        data/User.cpp
+)
 target_link_libraries(cpp_cli_auth_boilerplate sqlite3)
