--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,9 @@ find_package(Sqlite3 REQUIRED)
 add_executable(cpp_cli_auth_boilerplate main.cpp
         database/DatabaseManager.cpp
         database/DatabaseManager.h
-        data/User.h
+        model/User.h
         service/UserService.h
         service/UserService.cpp
-        data/User.cpp
+        model/User.cpp
 )
 target_link_libraries(cpp_cli_auth_boilerplate sqlite3)
